--- a/index.html
+++ b/index.html
@@ -80,10 +80,48 @@
             <iframe src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
         </div>
     </section>
-    <section id="about">
-        <h2>À propos</h2>
-        <p>Passionné par la musique classique et la vidéo, je crée des contenus engageants pour mettre en valeur les conservatoires et leurs talents. Mes compétences incluent le tournage, le montage, et la création de vidéos optimisées pour les réseaux sociaux.</p>
-    </section>
+<section id="about">
+    <h2>À propos</h2>
+    <p>Passionné par la musique classique et la vidéo, je crée des contenus engageants pour mettre en valeur les conservatoires et leurs talents. Mes compétences incluent le tournage, le montage et la réalisation de vidéos adaptées aux besoins spécifiques des institutions culturelles et éducatives.</p>
+    <h3>Nos Missions</h3>
+    <p>Notre objectif est d'accompagner les conservatoires, artistes et événements musicaux dans la mise en valeur de leur travail, tout en intégrant des pratiques responsables et durables.</p>
+    <h3>Notre Engagement RSE</h3>
+    <p>Nous alignons nos projets de tournage, montage et réalisation de vidéos sur les principes de l’écodesign et du bas carbone, en mettant en œuvre des actions concrètes pour minimiser notre impact environnemental. Voici nos approches pragmatiques :</p>
+    <ul>
+        <li>
+            <strong>Tournage Écoresponsable :</strong>
+            <ul>
+                <li>Clips libres de droits : utilisation de vidéos Pexels pour éviter tout tournage physique, éliminant les émissions liées aux déplacements et à l’équipement.</li>
+                <li>Tournages futurs : planification efficace des tournages (une seule session, plan de prises précis), utilisation d’éclairages LED alimentés par des batteries rechargeables.</li>
+                <li>Transport : recours au vélo, transports en commun et covoiturage pour réduire l’empreinte carbone des déplacements.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Montage Bas Carbone :</strong>
+            <ul>
+                <li>Logiciel : utilisation de DaVinci Resolve sur un ordinateur portable économe en énergie (AMD Ryzen 9 6900HS et Radeon Graphics, consommation maximale de 70-100 W contre 300 W pour un PC de bureau).</li>
+                <li>Optimisation : réduction des rendus inutiles en prévisualisant à basse résolution et en rendant uniquement la version finale en 1080p.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Réalisation et Diffusion Durables :</strong>
+            <ul>
+                <li>Site web : hébergement sur une plateforme écoresponsable (GitHub Pages, efficace pour les sites statiques), avec optimisation pour un chargement rapide (vidéos compressées, utilisation d’images légères).</li>
+                <li>Streaming : téléchargement des vidéos en 1080p plutôt qu’en 4K pour réduire l’empreinte carbone. Promotion de Vimeo pour des initiatives de durabilité plus visibles.</li>
+                <li>Stockage : stockage des fichiers sur un disque dur externe plutôt que dans le cloud afin de limiter l’utilisation des data centers.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Communication Écoresponsable :</strong>
+            <ul>
+                <li>Utilisation de clips libres de droits et d’équipements économes pour réduire l’impact environnemental des vidéos.</li>
+                <li>Préférence pour le matériel durable (Sony) et achat d’occasion pour les petits équipements.</li>
+                <li>Recyclage des déchets électroniques (ex. : batteries usagées) via des points de collecte locaux.</li>
+            </ul>
+        </li>
+    </ul>
+    <p>Nos pratiques reflètent notre engagement à intégrer la durabilité dans toutes les étapes de nos projets. Nous sommes convaincus que l’avenir de la production vidéo passe par des choix responsables et innovants.</p>
+</section>
     <section id="contact">
         <h2>Contact</h2>
         <p>Email : contact@votreportfolio.com</p>
