--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <h2>Portfolio</h2>
         <div class="video-card">
             <h3>Montage Narratif : Récital de Piano</h3>
-            <p>Exercice de montage utilisant des clips libres de droit (Pexels) pour simuler une captation de récital, avec synchronisation sur une pièce de Chopin.</p>
+            <p>Exercice de montage utilisant des clips libres de droits (Pexels) pour simuler une captation de récital, avec synchronisation sur une pièce de Chopin.</p>
             <iframe src="https://www.youtube.com/watch?v=_1iR5lnnMws" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="video-card">
