--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
         </div>
         <div class="video-card">
             <h3>Vidéo Promotionnelle : Conservatoire Fictif</h3>
-            <p>Montage simulant une vidéo promotionnelle pour un conservatoire, avec des plans d’étudiants et de professeurs, musique libre de droit.</p>
+            <p>Montage simulant une vidéo promotionnelle pour un conservatoire, avec des plans d’étudiants et de professeurs, musique libre de droits.</p>
             <iframe src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
         </div>
     </section>
 <section id="about">
     <h2>À propos</h2>
-    <p>Passionné par la musique classique et la vidéo, je crée des contenus engageants pour mettre en valeur les conservatoires et leurs talents. Mes compétences incluent le tournage, le montage et la réalisation de vidéos adaptées aux besoins spécifiques des institutions culturelles et éducatives.</p>
+    <p>Passionné par la musique classique et la vidéo, nous créons des contenus engageants pour mettre en valeur les conservatoires et leurs talents. Nos compétences incluent le tournage, le montage et la réalisation de vidéos adaptées aux besoins spécifiques des institutions culturelles et éducatives.</p>
     <h3>Nos Missions</h3>
     <p>Notre objectif est d'accompagner les conservatoires, artistes et événements musicaux dans la mise en valeur de leur travail, tout en intégrant des pratiques responsables et durables.</p>
     <h3>Notre Engagement RSE</h3>
@@ -91,9 +91,9 @@
         <li>
             <strong>Tournage Écoresponsable :</strong>
             <ul>
-                <li>Clips libres de droits : utilisation de vidéos Pexels pour éviter tout tournage physique, éliminant les émissions liées aux déplacements et à l’équipement.</li>
+                <li>Clips promotionnels libres de droits : utilisation de vidéos Pexels pour éviter tout tournage physique, éliminant les émissions liées aux déplacements et à l’équipement.</li>
                 <li>Tournages futurs : planification efficace des tournages (une seule session, plan de prises précis), utilisation d’éclairages LED alimentés par des batteries rechargeables.</li>
-                <li>Transport : recours au vélo, transports en commun et covoiturage pour réduire l’empreinte carbone des déplacements.</li>
+                <li>Transport : transports en commun et covoiturage pour réduire l’empreinte carbone des déplacements.</li>
             </ul>
         </li>
         <li>
@@ -127,7 +127,7 @@
         <p>Email : contact@votreportfolio.com</p>
     </section>
     <footer>
-        <p>&copy; 2025 Votre Nom - Tous droits réservés</p>
+        <p>&copy; 2025 PLNProd - Tous droits réservés</p>
     </footer>
 </body>
 </html>
