--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
         <div class="video-card">
             <h3>Montage Narratif : Récital de Piano</h3>
             <p>Exercice de montage utilisant des clips libres de droits (Pexels) pour simuler une captation de récital, avec synchronisation sur une pièce de Chopin.</p>
-            <iframe src="https://www.youtube.com/watch?v=_1iR5lnnMws" frameborder="0" allowfullscreen></iframe>
+            //<iframe src="https://www.youtube.com/watch?v=_1iR5lnnMws" frameborder="0" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/_1iR5lnnMws" frameborder="0" allowfullscreen></iframe>       
         </div>
         <div class="video-card">
             <h3>Vidéo Promotionnelle : Conservatoire Fictif</h3>
