--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="video-card">
             <h3>Vidéo Promotionnelle : Conservatoire Fictif</h3>
             <p>Montage simulant une vidéo promotionnelle pour un conservatoire, avec des plans d’étudiants et de professeurs, musique libre de droits.</p>
-            <iframe src="https://vimeo.com/manage/videos/1096651721/29906a25a2" frameborder="0" allowfullscreen></iframe>
+            <iframe title="vimeo-player" src="https://player.vimeo.com/video/1096651721?h=29906a25a2" width="640" height="360" frameborder="0"    allowfullscreen></iframe>
         </div>
     </section>
 <section id="about">
