--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <p>Email : contact@votreportfolio.com</p>
     </section>
     <footer>
-        <p>&copy; 2025 PLNProud - Tous droits réservés</p>
+        <p>&copy; 2025 PLNProudon - Tous droits réservés</p>
     </footer>
 </body>
 </html>
