--- a/index.html
+++ b/index.html
@@ -72,8 +72,10 @@
         <div class="video-card">
             <h3>Montage Narratif : Récital de Piano</h3>
             <p>Exercice de montage utilisant des clips libres de droits (Pexels) pour simuler une captation de récital, avec synchronisation sur une pièce de Chopin.</p>
-             <iframe title="vimeo-player" src="https://player.vimeo.com/video/1096651721?h=29906a25a2" width="640" height="360" frameborder="0"    allowfullscreen></iframe>
-        </div>
+            <div style="padding:56.25% 0 0 0;position:relative;">
+                <iframe src="https://player.vimeo.com/video/1096651721?h=29906a25a2&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Bach - Aria Goldberg - Exemple"></iframe>
+            </div>
+            <script src="https://player.vimeo.com/api/player.js"></script>
         <div class="video-card">
             <h3>Vidéo Promotionnelle : Conservatoire Fictif</h3>
             <p>Montage simulant une vidéo promotionnelle pour un conservatoire, avec des plans d’étudiants et de professeurs, musique libre de droits.</p>
@@ -127,7 +129,7 @@
         <p>Email : contact@votreportfolio.com</p>
     </section>
     <footer>
-        <p>&copy; 2025 PLNProudon - Tous droits réservés</p>
+        <p>&copy; 2025 PLNProudono - Tous droits réservés</p>
     </footer>
 </body>
 </html>
