--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
     <nav id="nav">
         <div class="nav-logo">
             <img src="https://via.placeholder.com/40x40?text=Logo" alt="PLN Prod Logo">
-            <p>PLN Prod</p>
+            <p>PLN Proud</p>
         </div>
         <ul>
             <li><a href="#narration">Narration</a></li>
